<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">大管家</string>
    <string name="hello_world">大管家</string>
    <string name="action_settings">Settings</string>
    <string name="附近搜尋">Button</string>
    <string name="_nearby_search">附近搜尋</string>
    <string name="_rent_house">租屋</string>
    <string name="_buy_house">買屋</string>
    <string name="_rechoose">重選</string>
    <string name="_map">地圖</string>
    <string name="_givein_house">頂讓</string>

</resources>
