<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="#999" >

	<RelativeLayout
	    android:layout_width="wrap_content"
	    android:layout_height="45dp"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:background="#EEE" >

	    <Button
	        android:id="@+id/rechoose"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:layout_gravity="center_vertical"
	        android:background="#EEE"
	        android:text="@string/_rechoose"
	        android:onClick="clickEvent" />

	    <TextView
	        android:id="@+id/title_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_centerVertical="true"
	        android:layout_gravity="center"
	        android:text="@string/app_name"
	        android:textColor="#000"
	        android:textSize="20sp" />

	    <Button
	        android:id="@+id/map"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:layout_gravity="center_vertical"
	        android:background="#EEE"
	        android:text="@string/_map"
	        android:onClick="clickEvent" />
	</RelativeLayout>

</RelativeLayout>
